<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/agentLinear"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/agent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/agentParagraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/agent_section_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/here_you_can_register_as_an_agent_an_agent_on_this_platform_is_an_entity_that_is_responsible_for_a_player_profile_that_includes_content_as_well_as_any_transactions_related_to_a_player"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/agentLinear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/bg_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agentLinear">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agent_section_login"
                        android:textSize="24sp"
                        android:textColor="@color/black"

                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/agentUsername"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:hint="@string/username"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/agentPassword"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:hint="@string/password"
                        android:textSize="20sp"/>
                    <Button
                        android:id="@+id/agentLogin"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/azure_blue"
                        android:text="@string/login"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agent_section_registration"
                        android:textSize="24sp"
                        android:textColor="@color/black"

                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/agentRegFirstname"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:hint="@string/firstname"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/agentRegLastname"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:hint="@string/lastname"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/agentRegEmail"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/agentRegUsername"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:hint="@string/username"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/agentRegPassword"
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:background="@color/bg_light"
                        android:textColor="@color/black"
                        android:hint="@string/password"
                        android:textSize="20sp"/>
                    <Button
                        android:id="@+id/agentRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/azure_blue"
                        android:text="@string/register"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
